--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 </head>
 
 <body>
+
+  <section>
+    <div class="has-text-centered has-background-light p-3">
+    <h3>This site is an API testing site created by Jaimon. Currently, it shows you the Cleveland Art Gallery assets through the REST API. Please use the Refresh button to see the latest art work.</h3>
+    </div>
+  </section>
   <section>
 
     <div class="container">
